--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       }
       /*-------------------- Leaderboard --------------------*/
        .leaderboard {
-         position: absolute;
-         top: 50%;
-         left: 50%;
-         transform: translate(-50%, -50%);
-         width: 350px;
+         /* position: absolute; */
+         margin: 20px auto 0;
+         /* transform: translate(-50%, -50%); */
+         max-width: 350px;
          background: linear-gradient(to bottom, #3a404d, #181c26);
          border-radius: 10px;
          box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
@@ -31,6 +30,7 @@
       .leaderboard h1 {
         font-size: 24px;
         color: #e1e1e1;
+        margin: 0;
         padding: 12px;
         text-align: center;
      }
