--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>High Score</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <style>
       /*-------------------- Body --------------------*/
       *, *::before, *::after {
