Apple Touch Icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>High Score</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
     <style>
       /*-------------------- Body --------------------*/
       *, *::before, *::after {
