--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
         border-radius: 10px;
         box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
       }
-      .button {
-        margin: 20px auto 0;
-        max-width: 350px;
-        background: #E7E6E8;
-        border-radius: 10px;
-        box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
-        text-decoration: none;
-        text-align: center;
-        color: #1f4476;
-      }
       .leaderboard h1 {
         font-size: 24px;
         color: #1f4476;
@@ -197,6 +187,25 @@
         margin: 0 auto;
         padding-top: 20px;
       }
+      .button {
+        margin: 30px auto 0;
+        max-width: 350px;
+        background: #e7e6e8;
+        border: 2px #1f4476 solid;
+        border-radius: 10px;
+        box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
+        font-size: 24px;
+        padding: 25px;
+        text-align: center;
+      }
+      .button a {
+        color: #1f4476;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      .button:hover {
+        background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
+      }
       @media screen and (max-width: 600px) {
         .leaderboard { width: 90% !important; }
       }
@@ -232,7 +241,7 @@
       </ol>
     </div>
     <div class="button">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" target="_blank">Submit a New Score</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" target="_blank">Submit New Score</a>
     </div>
   </body>
   <script type="text/javascript">
