--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>High Score</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Pop-A-Shot High Scores">
+    <meta property="og:image" content="social-sharing.jpg">
+    <meta property="og:description" content="List of high scores for Pop-A-Shot">
+    <meta property="og:url" content="https://popashot.johnshaida.com">
+    <meta name="twitter:card" content="summary_large_image">
     <style>
       /*-------------------- Body --------------------*/
       *, *::before, *::after {
