--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </ol>
     </div>
     <div class="button">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" target="_blank">Submit New Score</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" target="_blank">Submit New Score Test</a>
     </div>
   </body>
   <script type="text/javascript">
