--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         padding-top: 20px;
       }
       .button {
+        display: block;
         margin: 30px auto 0;
         max-width: 350px;
         background: #e7e6e8;
@@ -202,10 +203,7 @@
         box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
         font-size: 24px;
         padding: 25px;
-        text-align: center;
-      }
-      .button a {
-        color: #1f4476;
+        text-align: center;color: #1f4476;
         text-decoration: none;
         font-weight: bold;
       }
@@ -246,9 +244,7 @@
         </li>
       </ol>
     </div>
-    <div class="button">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" target="_blank">Submit New Score Test</a>
-    </div>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" class="button" target="_blank">Submit New Score Test</a>
   </body>
   <script type="text/javascript">
     function Get(yourUrl) {
