--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </li>
       </ol>
     </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" class="button" target="_blank">Submit New Score Test</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" class="button" target="_blank">Submit New Score</a>
   </body>
   <script type="text/javascript">
     function Get(yourUrl) {
