--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>High Score</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
+    <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#1f4476">
+    <link rel="shortcut icon" href="img/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#e7e6e8">
+    <meta name="msapplication-config" content="img/icons/browserconfig.xml">
+    <meta name="theme-color" content="#e7e6e8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Pop-A-Shot High Scores">
     <meta property="og:image" content="social-sharing.jpg">
@@ -198,7 +206,7 @@
       <ol id="list">
       </ol>
     </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" class="button" target="_blank">Submit New Score</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdq0xUuGqcft9YIZvJA0Xxub4cIxZpZIzo9iHvkRnrlrGw6hg/viewform?usp=sf_link" class="button" target="_blank">Submit New Score a</a>
   </body>
   <script type="text/javascript">
     function Get(yourUrl) {
