--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#e7e6e8">
     <meta name="msapplication-config" content="img/icons/browserconfig.xml">
-    <meta name="theme-color" content="#e7e6e8">
+    <meta name="theme-color" content="#0000ff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Pop-A-Shot High Scores">
