sharing title tweak

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Pop-A-Shot High Scores">
+    <meta property="og:title" content="Pop-A-Shot High Score">
     <meta property="og:image" content="https://popashot.johnshaida.com/img/social-sharing.jpg">
     <meta property="og:description" content="List of high scores for Pop-A-Shot">
     <meta property="og:url" content="https://popashot.johnshaida.com">
