fixed spreadsheet header names

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       }
 
       data.forEach(function (item, index) {
-        if (item.name != "blank") {
-          document.getElementById("list").innerHTML += '<li><mark>' + item.name + ' <span style="font-size: 0.7rem;">(' + item.timestamp + ')</span></mark><small>' + item.score + '</small></li>';
+        if (item.Name != "blank") {
+          document.getElementById("list").innerHTML += '<li><mark>' + item.Name + ' <span style="font-size: 0.7rem;">(' + item.Timestamp + ')</span></mark><small>' + item.Score + '</small></li>';
         }
       });
     }
