changed headings and image location

--- a/index.html
+++ b/index.html
@@ -200,9 +200,7 @@
   <body>
     <div class="leaderboard">
       <img src="img/pop-a-shot-logo.svg" alt="Pop-A-Shot logo" scale="0">
-      <h1>
-        HIGH SCORES
-      </h1>
+      <h1>RUSHBROOK<br>HIGH SCORES</h1>
       <ol id="list">
       </ol>
     </div>
