--- a/sawmillcreek/index.html
+++ b/sawmillcreek/index.html
@@ -199,10 +199,8 @@
   </head>
   <body>
     <div class="leaderboard">
-      <img src="img/pop-a-shot-logo.svg" alt="Pop-A-Shot logo" scale="0">
-      <h1>
-        HIGH SCORES
-      </h1>
+      <img src="../img/pop-a-shot-logo.svg" alt="Pop-A-Shot logo" scale="0">
+      <h1>SAWMILL CREEK<br>HIGH SCORES</h1>
       <ol id="list">
       </ol>
     </div>
